# ubuntu-lib

alpha-det-prediction1.2.0/: README.md
alpha-det-prediction1.2.0/example/: AlphaDet.cpp  AlphaDet.h  AlphaDet_test  CMakeLists.txt  detect.cpp  img_read.cpp  main.cpp  path-config.cmake  settings.ini
alpha-det-prediction1.2.0/example/data/: Lenna_512x512x1.raw
alpha-det-prediction1.2.0/include/: alpha_detection.h  alpha_merge.h  alpha_scan.h  base.h  grey_image_pyramid.h  image_list_gen.h  image_resizer.h
caffe-1.0.0/share/Caffe/: CaffeConfig.cmake  CaffeTargets-release.cmake  CaffeTargets.cmake
cv3.2/include/opencv2/: cvconfig.h
cv3.2_1/include/opencv2/: cvconfig.h
cv3.2_1/lib/: libopencv_world.so.3.2
cv3.2_python/config/: CMakeCache.txt  CMakeVars.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  OpenCVConfig.cmake  OpenCVModules.cmake  cmake_install.cmake  cmake_uninstall.cmake  install_manifest.txt  opencv_lapack.h  version_string.tmp
cv3.2_python/lib/: libopencv_calib3d.so.3.2.0  libopencv_core.so.3.2.0  libopencv_features2d.so.3.2.0  libopencv_flann.so.3.2.0  libopencv_highgui.so.3.2.0  libopencv_imgcodecs.so.3.2.0  libopencv_imgproc.so.3.2.0  libopencv_ml.so.3.2.0  libopencv_objdetect.so.3.2.0  libopencv_photo.so.3.2.0  libopencv_shape.so.3.2.0  libopencv_stitching.so.3.2.0  libopencv_superres.so.3.2.0  libopencv_video.so.3.2.0  libopencv_videoio.so.3.2.0  libopencv_videostab.so.3.2.0
leveldb-1.9/lib/: libleveldb.so.1
mxnet-0.10.0/: make.patch.txt
openblas-0.2.19/include/: openblas_config.h
(+12 files in other folders)
